--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@cypress/request": "^3.0.1",
     "@cypress/request-promise": "^5.0.0",
     "array.prototype.findindex": "^2.0.2",
+    "axios": "^1.7.3",
     "bl": "^1.2.3",
     "debug": "^3.2.7",
     "eventemitter3": "^3.0.0",
@@ -45,7 +46,7 @@
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-eslint": "^8.0.3",
-    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-class-properties": "^6.10.2",
     "babel-plugin-transform-es2015-destructuring": "^6.23.0",
     "babel-plugin-transform-es2015-parameters": "^6.24.1",
     "babel-plugin-transform-es2015-shorthand-properties": "^6.24.1",
@@ -55,14 +56,14 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-register": "^6.26.0",
     "concat-stream": "^1.6.0",
-    "eslint": "^2.13.1",
-    "eslint-config-airbnb": "^6.2.0",
-    "eslint-plugin-mocha": "^4.11.0",
+    "eslint": "^9.9.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-plugin-mocha": "^10.5.0",
     "is": "^3.2.1",
     "is-ci": "^1.0.10",
-    "istanbul": "^1.1.0-alpha.1",
-    "jsdoc-to-markdown": "^3.0.3",
-    "mocha": "^3.5.3",
+    "istanbul": "^0.4.5",
+    "jsdoc-to-markdown": "^8.0.3",
+    "mocha": "^10.7.3",
     "mocha-lcov-reporter": "^1.3.0",
     "node-static": "^0.7.10"
   },
