--- a/package.json
+++ b/package.json
@@ -31,21 +31,22 @@
   "dependencies": {
     "@cypress/request": "^3.0.1",
     "@cypress/request-promise": "^5.0.0",
-    "app": "^0.1.0",
     "array.prototype.findindex": "^2.0.2",
     "axios": "^1.7.3",
     "bl": "^1.2.3",
     "debug": "^3.2.7",
     "eventemitter3": "^3.0.0",
-    "express": "^4.19.2",
     "file-type": "^3.9.0",
     "luxon": "^3.5.0",
     "mime": "^1.6.0",
-    "mysql": "^2.18.1",
     "node-cache": "^5.1.2",
+    "mysql2": "^3.11.0",
     "node-telegram-bot-api": "^0.66.0",
     "pump": "^2.0.0",
-    "react-native-validator-form": "^1.0.0"
+    "react-native-validator-form": "^1.0.0",
+    "express": "^4.19.2",
+    "body-parser": "^1.20.2",
+    "connect-multiparty": "^2.2.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
