--- a/package.json
+++ b/package.json
@@ -40,8 +40,9 @@
     "luxon": "^3.5.0",
     "mime": "^1.6.0",
     "node-cache": "^5.1.2",
-    "mysql2": "^3.11.0",
     "node-telegram-bot-api": "^0.66.0",
+    "ioredis": "^5.4.1",
+    "mysql2": "^3.11.0",
     "pump": "^2.0.0",
     "react-native-validator-form": "^1.0.0",
     "express": "^4.19.2",
