--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "eventemitter3": "^3.0.0",
     "express": "^4.19.2",
     "file-type": "^3.9.0",
+    "grammy": "^1.29.0",
     "ioredis": "^5.4.1",
     "luxon": "^3.5.0",
     "mime": "^1.6.0",
