--- a/package.json
+++ b/package.json
@@ -18,10 +18,8 @@
     "doc": "jsdoc2md --files src/telegram.js --template doc/api.hbs > doc/api.md",
     "build": "babel -d ./lib src",
     "prepublishOnly": "npm run build && npm run gen-doc",
-    "eslint": "eslint ./src ./test ./examples",
     "mocha": "mocha",
-    "pretest": "npm runod",
-    "test": "npm run eslint && istanbul cover ./node_modules/mocha/bin/_mocha"
+    "pretest": "npm runod"
   },
   "author": "Yago Pérez <yagoperezs@gmail.com>",
   "license": "MIT",
@@ -29,50 +27,12 @@
     "node": ">=0.12"
   },
   "dependencies": {
-    "@cypress/request": "^3.0.1",
-    "@cypress/request-promise": "^5.0.0",
-    "array.prototype.findindex": "^2.0.2",
     "axios": "^1.7.3",
-    "bl": "^1.2.3",
-    "body-parser": "^1.20.2",
-    "connect-multiparty": "^2.2.0",
-    "debug": "^3.2.7",
-    "eventemitter3": "^3.0.0",
     "express": "^4.19.2",
-    "file-type": "^3.9.0",
-    "grammy": "^1.29.0",
     "ioredis": "^5.4.1",
     "luxon": "^3.5.0",
-    "mime": "^1.6.0",
-    "mysql2": "^3.11.0",
-    "node-cache": "^5.1.2",
-    "node-telegram-bot-api": "^0.66.0",
-    "pump": "^2.0.0",
-    "react-native-validator-form": "^1.0.0"
-  },
-  "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-eslint": "^8.0.3",
-    "babel-plugin-transform-class-properties": "^6.10.2",
-    "babel-plugin-transform-es2015-destructuring": "^6.23.0",
-    "babel-plugin-transform-es2015-parameters": "^6.24.1",
-    "babel-plugin-transform-es2015-shorthand-properties": "^6.24.1",
-    "babel-plugin-transform-es2015-spread": "^6.22.0",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-plugin-transform-strict-mode": "^6.24.1",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-register": "^6.26.0",
-    "concat-stream": "^1.6.0",
-    "eslint": "^9.9.0",
-    "eslint-config-airbnb": "^19.0.4",
-    "eslint-plugin-mocha": "^10.5.0",
-    "is": "^3.2.1",
-    "is-ci": "^1.0.10",
-    "istanbul": "^0.4.5",
-    "jsdoc-to-markdown": "^8.0.3",
-    "mocha": "^10.7.3",
-    "mocha-lcov-reporter": "^1.3.0",
-    "node-static": "^0.7.10"
+    "nodejieba": "^3.4.2",
+    "node-telegram-bot-api": "^0.66.0"
   },
   "repository": {
     "type": "git",
