--- a/package.json
+++ b/package.json
@@ -31,8 +31,10 @@
     "express": "^4.19.2",
     "ioredis": "^5.4.1",
     "luxon": "^3.5.0",
-    "nodejieba": "^3.4.2",
-    "node-telegram-bot-api": "^0.66.0"
+    "multer": "1.4.5-lts.1",
+    "mysql2": "^3.11.3",
+    "node-telegram-bot-api": "^0.66.0",
+    "nodejieba": "^3.4.2"
   },
   "repository": {
     "type": "git",
