--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "mysql2": "^3.11.3",
     "node-telegram-bot-api": "^0.66.0",
     "nodejieba": "^3.4.2",
+    "request-promise": "^4.2.6",
     "requests": "^0.3.0",
     "selenium": "^2.20.0",
     "telebot": "^1.4.1",
